src/test/ui/unreachable/unreachable-code.stderr
error: unreachable statement
  --> $DIR/unreachable-code.rs:7:3
   |
LL |   let a = 3;
   |   ^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/unreachable-code.rs:1:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

